| Summary: | ASTERISK-20297: Asterisk not sending status updates for Custom device hints on RINGING or RINGINUSE states | ||
| Reporter: | Noah Engelberth (mlnoah) | Labels: | |
| Date Opened: | 2012-08-22 08:44:36 | Date Closed: | 2012-09-04 10:53:07 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Subscriptions |
| Versions: | SVN 11.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CentOS 6.3 VM on CentOS 6.2 KVM cluster | Attachments: | ( 0) ASTERISK-20297.patch ( 1) subscription-problem.txt ( 2) subscription-verbose-console.txt |
| Description: | On Asterisk 11, SVN 371618, if you have a BLF hint subscribed for a Custom: device, Asterisk is not sending NOTIFY updates when the device state changes to RINGING or RINGINUSE. This happens on every case that the device is updated, whether my dialplan updates the status or I update the status via CLI. The NOTIFYs work correctly on release versions of Asterisk 10. | ||
| Comments: | By: Noah Engelberth (mlnoah) 2012-08-22 08:48:09.717-0500 Description of steps to replicate problem in subscription-problem.txt. Verbose console output from performing described steps attached in subscription-verbose-console.txt By: Mark Michelson (mmichelson) 2012-08-28 17:25:19.754-0500 I'm uploading ASTERISK-20297.patch. This fixed the issue locally for me. See if it does for you too. By: Noah Engelberth (mlnoah) 2012-08-29 10:06:31.651-0500 Applied the patch to SVN-branch-11-r371592, the patch fixed the reported issue. Hints to the SIP endpoints are now working for all four states, both when changed by the dialplan and when changed by the console. | ||